# clang-format

./: CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json
.github/: release-tag.json  release-tag.yml
.github/workflows/: xpbuild.yml
